# programming

./: .gitignore
C/xserver_test/: main  main.c  main.rs
CPP/CosmosKernel1/: CosmosKernel1.csproj  CosmosKernel1.sln  Kernel.cs
CPP/TestApp/: Source.cpp  TestApp.vcxproj
CPP/dumb_test/: main.cpp  main.py  test.cpp
CPP/gui_test/: gui.cpp
CPP/learningOpencv/: Test.cpp  learningOpencv.vcxproj
CPP/learning_cpp/: app  app.cpp
CPP/mfp_lang/: Main.cpp  Test.cpp  mfp_lang.sln  mfp_lang.vcxproj  mfp_lang.vcxproj.filters  test.mfp
CPP/quadratic_equation/: quadratic_equation.sln  quadratic_equation.vcxproj
CPP/test_app/: main.cpp
CSharp/Array/: Array.csproj  Program.cs
CSharp/BasicEngine/: Class1.cs
CSharp/BasicNeuralNetwork/: BasicNeuralNetwork.sln
CSharp/CosmosKernel1/: CosmosKernel1.csproj  Kernel.cs
CSharp/Currency/: CurrencyConverter.csproj
CSharp/Doublelikst/: Program.cs  opgave 8.csproj
CSharp/Formler/: Formler.sln
DBMS/: DatabaseHoster.go  Monkey.txt  homepage.html  main.go  testDatabaseHoster.go  words.data
DBMSandWebsite/: homepage.html
KanjiApp/: App.cs  KanjiApp.csproj  KanjiApp.sln  MainPage.cs  MauiProgram.cs  Networking.cs
Rust/learn_winapi/notepad/: Cargo.toml
Rust/learn_winapi/notepad/src/: main.rs
Website/: Index.html  Index3.html  Index4.html  Main.js  MineStyle.css  Minesweeper.js  Style.css  WebsiteHoster.go  web.config
dumbtest/: boot.asm  grub.cfg  kernel.c  linker.ld
qt-app-test/: qt-app-test.kdev4
teknologi/: stolensamplepic.xcf
website/: TestPage.txt  homepage.html  site.go  testDatabaseHoster.go
(+376 files in other folders)
