[package]
name = "notepad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { git = "https://github.com/mrpink32/Rust-winapi"}

# [dependencies.windows]
# version = "0.43.0"
# features = [
#     "Data_Xml_Dom",
#     "Win32_Foundation",
#     "Win32_Security",
#     "Win32_System_Threading",
#     "Win32_UI_WindowsAndMessaging",
# ]

# [build-dependencies]
# cc = "1.0.78"